@@ -159,12 +159,14 @@ class BuildRequest(object):
             cloned_dir = utils.git_clone('https://github.com/fastogt/rocksdb.git', abs_dir_path)
             os.chdir(cloned_dir)
 
-            make_install_rocksdb = list(build_external_system_args)
-            make_install_rocksdb.append('install-static')
-            make_install_rocksdb.insert(0, 'INSTALL_PATH={0}'.format(prefix_path))
-            make_install_rocksdb.insert(0, 'env')
+            os.mkdir('build_cmake_release')
+            os.chdir('build_cmake_release')
+            common_cmake_line = list(cmake_line)
+            #common_cmake_line.append('-DROCKSDB_LITE=ON')
+            cmake_policy = run_command.CmakePolicy(print_message)
             make_policy = run_command.CommonPolicy(print_message)
-            run_command.run_command_cb(make_install_rocksdb, make_policy)
+            run_command.run_command_cb(common_cmake_line, cmake_policy)
+            run_command.run_command_cb(make_install, make_policy)
             os.chdir(abs_dir_path)
         except Exception as ex:
             os.chdir(pwd)
